--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -17,7 +20,7 @@
 
 <body>
   <div class="container">
-    <h4 class="mt-2 text-center">Search Image for create slider</h4>
+    <h4 class="mt-2 text-center font-style">Search Image for create slider</h4>
     <div class="form-inline mt-3 d-flex justify-content-center">
       <div class="input-group col-md-6 mb-2">
         <input type="text" class="form-control" id="search" placeholder="nature">
@@ -26,13 +29,20 @@
     </div>
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
-        <h3 class="head-title text-center">Select image for create slider</h3>
+        <h3 class="head-title text-center font-style">Select image for create slider</h3>
         <div class="input-group col-md-3 mb-2 mb-md-0">
           <input type="number" min=1 oninput="validity.valid||(value='');" class="form-control" id="duration" placeholder="slider change duration">
         </div>
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
-      <div class="row gallery">
+            <!-- spinner -->
+            <div  class="d-flex justify-content-center mt-5 mb-5">
+              <div id="spinner" class="spinner-border text-success d-none " role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+            </div>
+      
+      <div id="img-gallery" class="row gallery">
 
       </div>
     </section>
@@ -41,14 +51,16 @@
       <section class="mt-5" id="sliders">
 
       </section>
-      <div class="dots d-flex mt-2 w-100 justify-content-center align-items-center bg-light">
+      <div class="dots d-flex mt-2 justify-content-center align-items-center">
         <span class="dot" onclick="changeItem(-1)"></span>
         <span class="dot" onclick="changeItem(1)"></span>
       </div>
     </div>
   </div>
+    <footer class="footer">copyright reserved</footer>
   <!-- Optional JavaScript -->
   <script src="./app.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
