--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-    <footer class="footer">copyright reserved</footer>
+    <footer class="footer"><small>@ Copyright 2021 Programming Hero. All rights reserved.</small> </footer>
   <!-- Optional JavaScript -->
   <script src="./app.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
